@@ -197,9 +197,7 @@ glossary_layout = {
                 'is_i18n': 0,
                 'label_edit': 'cpsdoc_glossary_dispall_label_edit',
                 'label': '',
-                'hidden_view': 1,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
+                'hidden_layout_modes': ['view'],
                 'description': '',
                 'css_class': '',
                 'is_limited': 1,
@@ -235,7 +233,7 @@ news_layout = {
                 'is_i18n': 1,
                 'label_edit': 'cpsdoc_News_preview_label_edit',
                 'label': '',
-                'hidden_view': 1,
+                'hidden_layout_modes': ['view'],
                 'description': 'cpsdoc_News_preview_description',
                 'deletable': 1,
                 'display_width': 200,
@@ -320,7 +318,7 @@ news_layout = {
                 'is_i18n': 1,
                 'label_edit': 'cpsdoc_theme_label_edit',
                 'label': '',
-                'hidden_view': 1,
+                'hidden_layout_modes': ['view'],
                 'description': 'cpsdoc_theme_description',
                 'vocabulary': 'dummy_voc',
             },
@@ -429,7 +427,7 @@ news1_layout = {
                 'is_i18n': 1,
                 'label_edit': 'cpsdoc_theme_label_edit',
                 'label': '',
-                'hidden_view': 1,
+                'hidden_layout_modes': ['view'],
                 'description': 'cpsdoc_theme_description',
                 'vocabulary': 'dummy_voc',
             },
@@ -475,7 +473,7 @@ news2_layout = {
                 'is_i18n': 1,
                 'label_edit': 'cpsdoc_News_preview_label_edit',
                 'label': '',
-                'hidden_view': 1,
+                'hidden_layout_modes': ['view'],
                 'description': 'cpsdoc_News_preview_description',
                 'deletable': 1,
                 'display_width': 64,
@@ -833,9 +831,7 @@ imagegallery_layout = {
                 'is_i18n': 0,
                 'label_edit': 'cpsdoc_imgallery_width_label_edit',
                 'label': '',
-                'hidden_view': 1,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
+                'hidden_layout_modes': ['view'],
                 'description': '',
                 'css_class': '',
                 'is_limited': 1,
@@ -852,9 +848,7 @@ imagegallery_layout = {
                 'is_i18n': 0,
                 'label_edit': 'cpsdoc_imgallery_height_label_edit',
                 'label': '',
-                'hidden_view': 1,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
+                'hidden_layout_modes': ['view'],
                 'description': '',
                 'css_class': '',
                 'is_limited': 1,
@@ -871,9 +865,7 @@ imagegallery_layout = {
                 'is_i18n': 0,
                 'label_edit': 'cpsdoc_imgallery_items_label_edit',
                 'label': '',
-                'hidden_view': 1,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
+                'hidden_layout_modes': ['view'],
                 'description': '',
                 'css_class': '',
                 'is_limited': 1,
@@ -890,9 +882,7 @@ imagegallery_layout = {
                 'is_i18n': 0,
                 'label_edit': 'cpsdoc_imgallery_col_label_edit',
                 'label': '',
-                'hidden_view': 1,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
+                'hidden_layout_modes': ['view'],
                 'description': '',
                 'css_class': '',
                 'is_limited': 1,
@@ -935,9 +925,6 @@ dummy_form_layout = {
                 'is_i18n': 0,
                 'label_edit': 'Dummy Form title field',
                 'label': '',
-                'hidden_view': 0,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
                 'description': 'Title for a dummy form',
                 'css_class': 'title',
                 'is_required': 0,
@@ -952,9 +939,6 @@ dummy_form_layout = {
                 'is_i18n': 0,
                 'label_edit': 'Dummy Form Description field',
                 'label': '',
-                'hidden_view': 0,
-                'hidden_edit': 0,
-                'hidden_empty': 0,
                 'description': 'Description field for a dummy form',
                 'css_class': 'description',
                 'is_required': 0,
